# pcos-prediction

./: LICENSE  README.md  pcos_prediction.py  pyproject.toml
